--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="apples"></div>
       </div>
       <p id="message"></p>
-      <p><a id="replay" href="#">Play another</a></p>
+      <p><a id="replay" href="#" hidden>Play another</a></p>
 
       <div id="spaces">
         <h2>Word:</h2>
